--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,17 +1,19 @@
-extent.reporter.spark.start=true
-extent.reporter.spark.out=test-output/SparkReport/Spark.html
+extent.reporter.spark.start=false
+extent.reporter.json.start=false
+extent.reporter.pdf.start=false
 extent.reporter.spark.config=src/test/resources/extent-config.xml
 
-extent.reporter.spark.out=test-output/SparkReport/
+extent.reporter.spark.out=test-Report/SparkReport/Spark.html
+extent.reporter.spark.out=test-Report/JSON/ExtentJSON.json
+extent.reporter.pdf.out=test-Report/PdfReport/ExtentPdf.pdf
 
 screenshot.dir=test-output/
 screenshot.rel.path=../
-extent.reporter.pdf.start=true
-extent.reporter.pdf.out=test output/PdfReport/ExtentPdf.pdf
+
 #basefolder.name=reports
 #basefolder.datetimepattern=d-MMM-YY HH-mm-ss
 extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,log
-systeminfo.os=Mac
-systeminfo.user=Naveen
+systeminfo.os=WIndows
+systeminfo.user=Boobal A
 systeminfo.build=1.1
 systeminfo.AppName=AutomationPractice
